# 2025-fnt-ctfg

./: .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json
gtsam-analyses/: CMakeLists.txt
gtsam-analyses/LostInTheWoods/: LostInTheWoodsStudy.cpp  WoodsTiming.cpp  default_params.yaml  fig2_params.yaml  fig3_params.yaml  fig4_params.yaml  timing_params.yaml
gtsam-analyses/simple_traj/: SimpleInterpExample.cpp
gtsam-analyses/steam-regression/: LostInTheWoods.yaml  RunLostInTheWoods.sh
gtsam-analyses/wnoa_graph/: WNOAGraph.cpp
gtsam-examples/: CMakeLists.txt  README.md
gtsam-examples/GiantGlassOfMilk/: GiantGlassOfMilk.yaml  GiantGlassOfMilkExample.cpp  GiantGlassOfMilkExample.h
gtsam-examples/LostInTheWoods/: LostInTheWoods.yaml  LostInTheWoodsExample.cpp  LostInTheWoodsExample.h
gtsam-examples/StarryNight/: Pose3Localization_StarryNight.cpp  Pose3Localization_StarryNight.h
latex/: book.bib  chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap5.tex  chap6.tex  chap7.tex  ct_regression_bg.tex  factor_graph_bg.tex  main.bbl-SAVE-ERROR  main.bcf-SAVE-ERROR  main.fdb_latexmk  main.fls  main.tex  notation_header.tex  now-ieee.bbx  nowfnt-biblatex.sty  nowfnt-listofjournals.cfg  nowfnt.cls  pubs.bib  query_during_solve.tex  refs.bib
latex/api/: api.tex  api_overview.tex
latex/appendices/: factor_graph_bg.tex  query_during_solve.tex
latex/figs/figs.graffle/: data.plist
python/: SE3_WNOA.py  SE3_WNOA_fig.py  linear_WNOA.py
